style.css
@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");

body {
  font-family: "Poppins", sans-serif;
  color: #222222;
}

.container {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
}

header {
  box-shadow: 0px 5px 10px #fada90;
  height: 20vh;
  display: flex;
  justify-content: center;
  align-items: center;
}

#header-img {
  width: 5em;
  height: auto;
  margin: 15px;
}

#header-text {
  margin: 15px;
  width: fit-content;
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
  align-items: start;
}

main {
  display: flex;
  justify-content: center;
  align-items: space-around;
  height: 76vh;
}

#card {
  display: grid;
  grid-template-rows: 2;
  grid-template-columns: 1;
  align-items: start;
  justify-items: center;
  margin: 30px;
  padding: 10px;
  border: 1px solid #ffe19c;
  border-radius: 10px;
  background-color: #fff0c8;
  box-shadow: 5px 7px 15px #a5a5a5, 2px 3px 15px #dfdfdf;
  min-width: 325px;
  width: 30vw;
  max-width: 350px;
  min-height: 500px;
  height: 50vh;
  max-height: 717px;
  box-sizing: border-box;
}

#card-word {
  grid-column: 1 / 2;
  grid-row: 1;
  align-self: center;
  font-size: 4em;
  padding-bottom: 10px;
  margin: 5px;
}

#game-instruction {
  width: 60%;
  text-align: center;
  font-size: 0.9em;
  color: #4e4e4e;
}

.option {
  width: 5em;
  margin: 10px;
  padding: 15px;
  border-radius: 10px;
  background-color: #ffffff;
  transition: 500ms;
}

.option:hover {
  background-color: #e6e6e6;
  cursor: pointer;
}

.wrong,
.wrong:hover {
  background-color: rgb(255, 118, 118);
}

.correct,
.correct:hover {
  background-color: rgb(163, 219, 163);
}

#options {
  display: grid;
  grid-template-columns: 2;
  grid-template-rows: 2;
  align-items: center;
  justify-items: center;
}

#option-1 {
  grid-column: 1;
  grid-row: 1;
}

#option-2 {
  grid-column: 2;
  grid-row: 1;
}

#option-3 {
  grid-column: 1;
  grid-row: 2;
}

#option-4 {
  grid-column: 2;
  grid-row: 2;
}

#game-options {
  display: flex;
  width: 100%;
  justify-content: space-between;
}

button {
  border: 1px solid #ffe19c;
  border-radius: 5px;
  padding: 5px 15px;
  margin: 0px 30px;
  padding: 10px;
  font-size: 2em;
  background-color: #fff0c8;
  box-shadow: 3px 4px 15px #a5a5a5, 1px 2px 5px #dfdfdf;
  transition: 250ms;
}

button:hover {
  background-color: #ffeab1;
  cursor: pointer;
}

footer {
  text-align: center;
  font-size: 0.7em;
}

